# PropaTrack

./: .gitignore  .pre-commit-config.yaml  README.md  experiments.ipynb  main.py  pyproject.toml  requirements.txt
.github/workflows/: black.yml  build.yml  pylint.yml
raft/: utils.py
src/raft/: utils.py
src/utils/: documentation.py  frame_processing.py  pipeline.py  visualization.py
tests/utils/: test_frame_processing.py  test_visualization.py
utils/: documentation.py  frame_processing.py  pipeline.py  video_handling.py  visualization.py
videos/DoubleC-shape/: double_c_shape.cihx
