[tool.poetry]
name = "experiments"
version = "0.1.0"
description = ""
authors = ["Christian Singer <christian.singer@mail.schwarz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.4"
tqdm = "^4.66.2"
opencv-python = "^4.9.0.80"
scikit-image = "^0.23.2"

[tool.black]
line-length = 100

[tool.pylint.typecheck]
generated-members = ["cv2.*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
