[tool.poetry]
name = "propatrack"
version = "0.1.0"
description = "Tool to track the speed of self-propagating reactions
               on reactive multilayer foils."
authors = ["Christian Singer <christiansinger09@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.9.0"
tqdm = "^4.66.2"
opencv-python = "^4.9.0.80"
scikit-image = "^0.23.2"
numpy = "^1.26.4"

[tool.black]
line-length = 100

[tool.pylint.typecheck]
generated-members = ["cv2.*"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
